--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,20 +4,14 @@ body, html {
   height: 100%;
 }
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+/* #root {
+
+
   background-image: url('./public/background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
+} */
 
 .board {
   display: flex;
