--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,10 +16,6 @@ body, html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* background-image: url('./public/background.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat; */
 }
 
 .board {
@@ -29,7 +25,7 @@ body, html {
   align-content: center;
   flex-wrap: wrap;
   max-width: 60vmin;
-  width: 100%; /* Make sure the width is 100% */
+  width: 100%;
 }
 
 .squares {
@@ -38,21 +34,26 @@ body, html {
   font-size: 400%;
   width: 20vmin;
   height: 20vmin;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 2px solid #fff; Optional: Add border for better visibility */
 }
 
 .choose {
-background-color: #05bcaa;
-margin-bottom: 10px; /* Optional: Add margin to separate buttons */
-font-size: 100%;
-width: 20vmin;
-height: 8vmin;
-border-radius: 10px;
-margin-inline: 2vmin;
+  background-color: #05bcaa;
+  margin-bottom: 10px;
+  font-size: 100%;
+  font-weight: bold;
+  width: 20vmin;
+  height: 8vmin;
+  border-radius: 10px;
+  margin-inline: 2vmin;
 }
 
-h1{
-  color:white
-  ;
+h1 {
+  color: white;
 }
+
 
 
