--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,14 @@
+.req_vs {
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-width: 400px;
+  box-shadow: 0 2px 5px #0003;
+  z-index: 1000;
+}
+
 body, html {
   margin: 0;
   padding: 0;
@@ -23,6 +34,7 @@ body, html {
   justify-content: center;
   align-items: center;
   align-content: center;
+  margin-top: 30vmin;
   flex-wrap: wrap;
   max-width: 60vmin;
   width: 100%;
